home page mottos in progress

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
+<body id="home-page">
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" id="navbar-logo"></a>
-        
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -46,6 +50,39 @@
             </form>
         </div>
     </nav>
+
+    <!-- Content -->
+    <div class="container.fluid">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8" id="title">
+                Divas in Technology
+            </div>
+        </div>
+        <div class="row dark-purple">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <p id="flower-motto">- From This STEM, A Flower Grows -</p>
+                <p id="motto-subheading">- DTech Motto</p>
+            </div>
+        </div>
+        <div class="row light-purple">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <p id="flower-motto">Divas in Technology</p>
+                <p id="motto-subheading">- DTech Motto</p>
+                <p>Empowering girls in technology</p>
+                <p>changing the future</p>
+            </div>
+        </div>
+        <div class="row dark-purple">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <p id="flower-motto">- From This STEM, A Flower Grows -</p>
+                <p id="motto-subheading">- DTech Motto</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
