working on homepage

--- a/index.html
+++ b/index.html
@@ -59,27 +59,72 @@
                 Divas in Technology
             </div>
         </div>
-        <div class="row dark-purple">
+        <div class="row motto1-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <p id="flower-motto">- From This STEM, A Flower Grows -</p>
                 <p id="motto-subheading">- DTech Motto</p>
             </div>
         </div>
-        <div class="row light-purple">
+        <div class="row motto2-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <p id="flower-motto">Divas in Technology</p>
-                <p id="motto-subheading">- DTech Motto</p>
-                <p>Empowering girls in technology</p>
-                <p>changing the future</p>
+                <p class="motto" id="motto-line1">DIVAS IN TECHNOLOGY</p>
+                <img src="images/logo.png" class="motto" id="motto-line2">
+                <p class="motto" id="motto-line3">EMPOWERING GIRLS IN TECHNOLOGY</p>
+                <p class="motto" id="motto-line4">CHANGING THE FUTURE</p>
             </div>
         </div>
-        <div class="row dark-purple">
+        <div class="row motto1-bg">
+            <div class="col-md-7"></div>
+            <div class="col-md-3" style="margin: 15px 0px 15px 0px;">
+                <a href="#" class="link">LEARN MORE ABOUT OUR MISSION</a>
+            </div>
+        </div>
+        <div class="row motto1-bg">
+            <div class="col-md-5"></div>
+            <div class="col-md-2">
+                <!-- Add down arrow here -->
+            </div>
+        </div>
+        <div class="row break-pt"></div>
+        <div class="row upcoming-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <p id="flower-motto">- From This STEM, A Flower Grows -</p>
-                <p id="motto-subheading">- DTech Motto</p>
+            <div class="col-md-3 upcoming1-bg">
+                <p id="upcoming-programs">UPCOMING PROGRAMS</p>
+            </div>
+            <div class="col-md-5 upcoming2-bg">
+                <p id="about-programs">
+                    DTech works to provide young girls with invaluable technological skills and knowledge, empowering girls and thereby changing the future. We are proud to offer a wide array of technology programs for girls of all ages, ethnicities, and backgrounds.
+                </p>
+                <a href="#" class="link" id="see-programs">SEE UPCOMING PROGRAMS</a>
+            </div>
+        </div>
+        <div class="row upcoming-bg">
+            <div class="col-md-2"></div>
+            <div class="col-md-4 program1-bg">
+                <p class="program-date">21 May</p>
+                <p class="program-title">Introduction to Python</p>
+                <!-- Add arrow link to program details here -->
+            </div>
+            <div class="col-md-4 program2-bg">
+                <p class="program-date">15 June</p>
+                <p class="program-title">Robo Code</p>
+                <!-- Add arrow link to program details here -->
+            </div>
+        </div>
+        <div class="row break-pt"></div>
+        <div class="row contact-bg">
+            <div class="col-md-2"></div>
+            <div class="col-md-4 program1-bg">
+                <p class="program-date">21 May</p>
+                <p class="program-title">Introduction to Python</p>
+                <!-- Add arrow link to program details here -->
+            </div>
+            <div class="col-md-4 program2-bg">
+                <p class="program-date">15 June</p>
+                <p class="program-title">Robo Code</p>
+                <!-- Add arrow link to program details here -->
             </div>
         </div>
     </div>
