working on contact us

--- a/index.html
+++ b/index.html
@@ -113,18 +113,24 @@
                 <!-- Add arrow link to program details here -->
             </div>
         </div>
+
+        <!-- Contact Us -->
         <div class="row break-pt"></div>
         <div class="row contact-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-4 program1-bg">
-                <p class="program-date">21 May</p>
-                <p class="program-title">Introduction to Python</p>
-                <!-- Add arrow link to program details here -->
+            <div class="col-md-8">
+                <p id="contact-title">GET IN TOUCH WITH DTECH</p>
+                <!-- Add line break here -->
             </div>
-            <div class="col-md-4 program2-bg">
-                <p class="program-date">15 June</p>
-                <p class="program-title">Robo Code</p>
-                <!-- Add arrow link to program details here -->
+        </div>
+        <div class="row contact-bg">
+            <div class="col-md-2"></div>
+            <div class="col-md-4">
+                <p id="contact-message">Get in touch with us through our social media platforms or contact president Tania Mishra with any questions.</p>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="link" id="contact-tania">CONTACT TANIA MISHRA</a>
+                <!-- Add Instagram and LinkedIn links here -->
             </div>
         </div>
     </div>
