--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 <body id="home-page">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar fixed-top navbar-expand-lg">
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" id="navbar-logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Board Members</a>
                         <a class="dropdown-item" href="#">Volunteers</a>
                         <a class="dropdown-item" href="#">MSOE</a>
@@ -53,7 +53,7 @@
 
     <!-- Content -->
     <div class="container.fluid">
-        <div class="row">
+        <div class="row" style="margin-top: 100px;">
             <div class="col-md-2"></div>
             <div class="col-md-8" id="title">
                 Divas in Technology
@@ -128,7 +128,8 @@
             <div class="col-md-4">
                 <p id="contact-message">Get in touch with us through our social media platforms or contact president Tania Mishra with any questions.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-1"></div>
+            <div class="col-md-3">
                 <a href="#" class="link" id="contact-tania">CONTACT TANIA MISHRA</a>
                 <!-- Add Instagram and LinkedIn links here -->
             </div>
