--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <div class="col-md-4 program1-bg">
                 <p class="program-date">21 May</p>
                 <p class="program-title">Introduction to Python</p>
-                <!-- Add arrow link to program details here -->
+                <a href="#"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
             <div class="col-md-4 program2-bg">
                 <p class="program-date">15 June</p>
                 <p class="program-title">Robo Code</p>
-                <!-- Add arrow link to program details here -->
+                <a href="#"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
         </div>
 
