pages created, navbar updated

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="pages/aboutUs.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Board Members</a>
-                        <a class="dropdown-item" href="#">Volunteers</a>
-                        <a class="dropdown-item" href="#">MSOE</a>
+                        <a class="dropdown-item" href="pages/boardMembers.html">Board Members</a>
+                        <a class="dropdown-item" href="pages/partners.html">Partners</a>
+                        <a class="dropdown-item" href="pages/volunteers.html">Volunteers</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Upcoming Programs</a>
+                    <a class="nav-link" href="pages/upcomingPrograms.html">Upcoming Programs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Past Programs</a>
+                    <a class="nav-link" href="pages/pastPrograms.html">Past Programs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="pages/contactUs.html">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Donate</a>
