--- a/pages/mission.html
+++ b/pages/mission.html
@@ -23,13 +23,14 @@
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="aboutUs.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <p class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
-                    </a>
+                    </p>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="boardMembers.html">Board Members</a>
-                        <a class="dropdown-item" href="partners.html">Partners</a>
-                        <a class="dropdown-item" href="volunteers.html">Volunteers</a>
+                        <a class="dropdown-item" href="pages/mission.html">Our Mission</a>
+                        <a class="dropdown-item" href="pages/boardMembers.html">Board Members</a>
+                        <a class="dropdown-item" href="pages/partners.html">Partners</a>
+                        <a class="dropdown-item" href="pages/volunteers.html">Volunteers</a>
                     </div>
                 </li>
                 <li class="nav-item">
