mission and vision content needed, ui done

--- a/pages/mission.html
+++ b/pages/mission.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divas in Technology</title>
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/pastProgramsStyles.css">
+    <link rel="stylesheet" href="../styles/missionStyles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body id="past-programs">
+<body id="our-mission">
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg">
         <a class="navbar-brand" href="../index.html"><img src="../images/logo.png" id="navbar-logo"></a>
@@ -19,7 +19,7 @@
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
@@ -27,10 +27,10 @@
                         About Us
                     </p>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="pages/mission.html">Our Mission</a>
-                        <a class="dropdown-item" href="pages/boardMembers.html">Board Members</a>
-                        <a class="dropdown-item" href="pages/partners.html">Partners</a>
-                        <a class="dropdown-item" href="pages/volunteers.html">Volunteers</a>
+                        <a class="dropdown-item" href="mission.html">Our Mission</a>
+                        <a class="dropdown-item" href="boardMembers.html">Board Members</a>
+                        <a class="dropdown-item" href="partners.html">Partners</a>
+                        <a class="dropdown-item" href="volunteers.html">Volunteers</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -58,39 +58,44 @@
         <div class="row" style="margin-top: 100px;">
             <div class="col-md-2"></div>
             <div class="col-md-8" id="title">
-                Past Programs
+                OUR MISSION
             </div>
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-4 program-bg">
-                <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Summer 2021 Program</p>
-                <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
-                <p class="program-description">
-                    In this 4-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects were based on their hobbies and interests. We were joined by a guest speaker, Megan Bruzan, the founder and lead developer at Milwaukee Website Designs.
-                </p>
-            </div>
-            <div class="col-md-4 ceremony-bg">
-                <!-- Add group picture here -->
-                <a href="#" class="link ceremony-link">VIEW FINAL CEREMONY</a>
+            <div class="col-md-5">
+                <p class="about-title">About Divas in Technology</p>
             </div>
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-4 ceremony-bg">
-                <!-- Add group picture here -->
-                <a href="#" class="link ceremony-link">VIEW FINAL CEREMONY</a>
+            <div class="col-md-5">
+                <p class="motto">From this stem, a flower blooms</p>
+                <p class="motto-subheading">- DTech Official Motto</p>
+                <p class="about-description">
+                    Divas in Technology (DTech) is a platform created by Tania Mishra to expand the outreach of computer science to younger girls. The goal of this platform is to host multiple computer science workshops and programs for girls of all ages, ethnicities, and backgrounds. Our mission is to help inspire girls to close the gender gap in technology-related career fields. We want to help younger girls gain resources early on by hosting workshops led by high school and college students who are intending to pursue a career in a technology field. Networking opportunities will also be included through guest speakers who are currently in the workforce.
+                </p>
             </div>
-            <div class="col-md-4 program-bg">
-                <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Fall 2020 Program</p>
-                <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
-                <p class="program-description">
-                    In this 8-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects aimed to help or solve an issue they personally faced in the "new normal" (virtual environment). Two guest speakers appeared throughout the program: Rachel Duchesneau, a software developer at Northwestern Mutual, and Diane Schwarz, the CIO of Johnson Controls.
+            <div class="col-md-3">
+                <img src="../images/logo.png" id="logo">
+            </div>
+        </div>
+        <div class="row main-bg">
+            <div class="col-md-2"></div>
+            <div class="col-md-4">
+                <p class="about-title">Our Mission</p>
+                <p class="about-description">
+                    Divas in Technology (DTech) is a platform created by Tania Mishra to expand the outreach of computer science to younger girls. The goal of this platform is to host multiple computer science workshops and programs for girls of all ages, ethnicities, and backgrounds. Our mission is to help inspire girls to close the gender gap in technology-related career fields. We want to help younger girls gain resources early on by hosting workshops led by high school and college students who are intending to pursue a career in a technology field. Networking opportunities will also be included through guest speakers who are currently in the workforce.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <p class="about-title">Our Vision</p>
+                <p class="about-description">
+                    Divas in Technology (DTech) is a platform created by Tania Mishra to expand the outreach of computer science to younger girls. The goal of this platform is to host multiple computer science workshops and programs for girls of all ages, ethnicities, and backgrounds. Our mission is to help inspire girls to close the gender gap in technology-related career fields. We want to help younger girls gain resources early on by hosting workshops led by high school and college students who are intending to pursue a career in a technology field. Networking opportunities will also be included through guest speakers who are currently in the workforce.
                 </p>
             </div>
         </div>
+        
         <!-- Contact Us -->
         <div class="row break-pt"></div>
         <div class="row contact-bg">
@@ -111,6 +116,7 @@
                 <!-- Add Instagram and LinkedIn links here -->
             </div>
         </div>
+    </div>
     </div>
 
 <!-- Bootstrap Javascript Links -->
