--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -19,7 +19,7 @@
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
@@ -36,7 +36,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="upcomingPrograms.html">Upcoming Programs</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="pastPrograms.html">Past Programs</a>
                 </li>
                 <li class="nav-item">
@@ -58,7 +58,7 @@
         <div class="row" style="margin-top: 100px;">
             <div class="col-md-2"></div>
             <div class="col-md-8" id="title">
-                Past Programs
+                PAST PROGRAMS
             </div>
         </div>
         <div class="row main-bg">
@@ -91,6 +91,7 @@
                 </p>
             </div>
         </div>
+        
         <!-- Contact Us -->
         <div class="row break-pt"></div>
         <div class="row contact-bg">
