--- a/pages/mission.html
+++ b/pages/mission.html
@@ -80,7 +80,7 @@
                 <img src="../images/logo.png" id="logo">
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row main-bg" style="padding-bottom: 10%;">
             <div class="col-md-2"></div>
             <div class="col-md-4">
                 <p class="about-title">Our Mission</p>
