upcoming programs dropdown working

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -69,12 +69,12 @@
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-8 program-dropdown">
+            <div class="col-md-8 program-dropdown" id="program1">
                 <p class="dropdown-title">Intro to Coding, Python</p>
                 <!-- Add dropdown arrow here -->
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row main-bg" id="program1-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
                 <p class="program-title">Intro to Web Development</p>
@@ -91,12 +91,12 @@
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-8 program-dropdown">
+            <div class="col-md-8 program-dropdown" id="program2">
                 <p class="dropdown-title">Intro to Coding, Python</p>
                 <!-- Add dropdown arrow here -->
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row main-bg" id="program2-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
                 <p class="program-title">Intro to Web Development</p>
@@ -113,12 +113,12 @@
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-8 program-dropdown">
+            <div class="col-md-8 program-dropdown" id="program3">
                 <p class="dropdown-title">Intro to Coding, Python</p>
                 <!-- Add dropdown arrow here -->
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row main-bg" id="program3-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
                 <p class="program-title">Intro to Web Development</p>
@@ -161,5 +161,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../javascript/programsDropdown.js"></script>
 </body>
 </html>
