most links working, email not working

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row motto1-bg">
             <div class="col-md-7"></div>
             <div class="col-md-3" style="margin: 15px 0px 15px 0px;">
-                <a href="#" class="link">LEARN MORE ABOUT OUR MISSION</a>
+                <a href="pages/mission.html" class="link">LEARN MORE ABOUT OUR MISSION</a>
             </div>
         </div>
         <div class="row motto1-bg">
@@ -99,7 +99,7 @@
                 <p id="about-programs">
                     DTech works to provide young girls with invaluable technological skills and knowledge, empowering girls and thereby changing the future. We are proud to offer a wide array of technology programs for girls of all ages, ethnicities, and backgrounds.
                 </p>
-                <a href="#" class="link" id="see-programs">SEE UPCOMING PROGRAMS</a>
+                <a href="pages/upcomingPrograms.html" class="link" id="see-programs">SEE UPCOMING PROGRAMS</a>
             </div>
         </div>
         <div class="row upcoming-bg">
@@ -107,12 +107,12 @@
             <div class="col-md-4 program1-bg">
                 <p class="program-date">21 May</p>
                 <p class="program-title">Introduction to Python</p>
-                <a href="#"><img src="images/rightArrow.png" class="program-arrow"></a>
+                <a href="pages/upcomingPrograms.html#program2"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
             <div class="col-md-4 program2-bg">
                 <p class="program-date">15 June</p>
                 <p class="program-title">Robo Code</p>
-                <a href="#"><img src="images/rightArrow.png" class="program-arrow"></a>
+                <a href="pages/upcomingPrograms.html#program2"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
         </div>
 
