--- a/pages/partners.html
+++ b/pages/partners.html
@@ -73,7 +73,7 @@
                 <p class="description">
                     The Milwaukee School of Engineering is a partner of numerous DTech programs. MSOE is a private, non-profit university located in Milwaukee, WI. MSOE offers bachelor's and master's degrees in top-ranked engineering, business, and nursing programs. MSOE supports a variety of STEM and community programs, as well as programs specifically geared towards high schoolers.
                 </p>
-                <a href="#" class="link" class="website-link">LEARN MORE ABOUT MSOE</a>
+                <a href="https://www.msoe.edu/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT MSOE</a>
             </div>
             <div class="col-md-4">
                 <img src="../images/msoe.jpeg" class="picture">
@@ -91,7 +91,7 @@
                 <p class="description">
                     The Milwaukee School of Engineering is a partner of numerous DTech programs. MSOE is a private, non-profit university located in Milwaukee, WI. MSOE offers bachelor's and master's degrees in top-ranked engineering, business, and nursing programs. MSOE supports a variety of STEM and community programs, as well as programs specifically geared towards high schoolers.
                 </p>
-                <a href="#" class="link" class="website-link">LEARN MORE ABOUT JOURNEY HOUSE</a>
+                <a href="http://www.journeyhouse.org/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT JOURNEY HOUSE</a>
             </div>
             <div class="col-md-4">
                 <img src="../images/journeyHouse.jpeg" class="picture">
