--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -73,14 +73,14 @@
             </div>
             <div class="col-md-4 ceremony-bg">
                 <!-- Add group picture here -->
-                <a href="#" class="link ceremony-link">VIEW FINAL CEREMONY</a>
+                <a href="https://youtu.be/yjLoRWqiAEs" target="_blank" class="link ceremony-link">VIEW FINAL CEREMONY</a>
             </div>
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-4 ceremony-bg">
                 <!-- Add group picture here -->
-                <a href="#" class="link ceremony-link">VIEW FINAL CEREMONY</a>
+                <a href="https://youtu.be/LjZmXUKcI8c" target="_blank" class="link ceremony-link">VIEW FINAL CEREMONY</a>
             </div>
             <div class="col-md-4 program-bg">
                 <p class="program-title">Intro to Web Development</p>
