sanjana bio and headshot added

--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -109,11 +109,11 @@
             <div class="col-md-5">
                 <p class="position">Treasurer</p>
                 <p class="bio">
-                    Tania Mishra is a current Senior in high school and the creator of DTech. Tania has been interested in technology and computer science since her first digital exploration class in 6th grade. She completed two levels of Girls Who Code and participated in multiple workshops focused on empowering and inspiring girls in technology. She has participated and won awards in ProjectCSGirls and Intel ISEF-affiliated science and engineering fairs. She is currently interning at Northwestern Mutual on Jay Walters' team. Tania wants to help lead more girls into the path of computer science. She has received a lot of guidance from teachers mentors at NM, and she wishes to pass it on to younger girls so that they can take advantage of every opportunity and continue to explore technology fields.
+                    Sanjana Tarigoppula is a junior at the University of Wisconsin-Madison. She started coding her sophomore year of high school, and is now majoring in Computer Sciences and pursuing a certificate in Business. Sanjana is involved in coding organizations such as Coding for Good, where she is working on projects oriented around full stack development, and she will be interning at GE Healthcare this summer. Sanjana is very excited to serve on the board for Divas in Technology and increase awareness on tech careers!
                 </p>
             </div>
             <div class="col-md-3">
-                <img src="../images/logo.png" class="profile-pic">
+                <img src="../images/sanjanaProfilePic.jpg" class="profile-pic">
             </div>
         </div>
         <div class="row main-bg">
