--- a/pages/mission.html
+++ b/pages/mission.html
@@ -27,7 +27,7 @@
                         About Us
                     </p>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="mission.html">Our Mission</a>
+                        <a class="dropdown-item" href="mission.html">Our Mission and Vision</a>
                         <a class="dropdown-item" href="boardMembers.html">Board Members</a>
                         <a class="dropdown-item" href="partners.html">Partners</a>
                         <a class="dropdown-item" href="volunteers.html">Volunteers</a>
@@ -58,7 +58,7 @@
         <div class="row" style="margin-top: 100px;">
             <div class="col-md-2"></div>
             <div class="col-md-8" id="title">
-                OUR MISSION
+                OUR MISSION AND VISION
             </div>
         </div>
         <div class="row main-bg">
@@ -77,7 +77,7 @@
                 </p>
             </div>
             <div class="col-md-3">
-                <img src="../images/logo.png" id="logo">
+                <img src="../images/logoBlack.png" id="logo">
             </div>
         </div>
         <div class="row main-bg" style="padding-bottom: 10%;">
