--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         About Us
                     </p>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="pages/mission.html">Our Mission</a>
+                        <a class="dropdown-item" href="pages/mission.html">Our Mission and Vision</a>
                         <a class="dropdown-item" href="pages/boardMembers.html">Board Members</a>
                         <a class="dropdown-item" href="pages/partners.html">Partners</a>
                         <a class="dropdown-item" href="pages/volunteers.html">Volunteers</a>
