--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -27,7 +27,7 @@
                         About Us
                     </p>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="mission.html">Our Mission</a>
+                        <a class="dropdown-item" href="mission.html">Our Mission and Vision</a>
                         <a class="dropdown-item" href="boardMembers.html">Board Members</a>
                         <a class="dropdown-item" href="partners.html">Partners</a>
                         <a class="dropdown-item" href="volunteers.html">Volunteers</a>
