--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav class="navbar fixed-top navbar-expand-lg">
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" id="navbar-logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <img src="images/menuIcon.png" id="menu-icon">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -48,7 +49,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn my-2 my-sm-0" id="search-btn" type="submit">Search</button>
             </form>
         </div>
     </nav>
