linkedin added, tania bio updated

--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -73,8 +73,9 @@
             <div class="col-md-5">
                 <p class="position">Founder, President</p>
                 <p class="bio">
-                    Tania Mishra is a current Senior in high school and the creator of DTech. Tania has been interested in technology and computer science since her first digital exploration class in 6th grade. She completed two levels of Girls Who Code and participated in multiple workshops focused on empowering and inspiring girls in technology. She has participated and won awards in ProjectCSGirls and Intel ISEF-affiliated science and engineering fairs. She is currently interning at Northwestern Mutual on Jay Walters' team. Tania wants to help lead more girls into the path of computer science. She has received a lot of guidance from teachers mentors at NM, and she wishes to pass it on to younger girls so that they can take advantage of every opportunity and continue to explore technology fields.
+                    Tania Mishra will be attending college next fall, having graduated high school a semester early. Tania has been interested in technology since her first digital exploration class in 6th grade. Since then, she has been involved in multiple programs focused on empowering and inspiring girls in tech, such as ProjectCSGirls and Girls Who Code. Tania is also a 2021 National Winner and 3-times Wisconsin Affiliate winner for NCWIT's Aspirations in Computing Award. She previously interned at Northwestern Mutual in the mainframe space and on a full-stack development project. Tania wants to help lead more girls into the path of computer science, and she hopes to accomplish this through DTech!
                 </p>
+                <a href="https://www.linkedin.com/in/taniamishra127/" target="_blank" class="link">Connect with Tania on LinkedIn</a>
             </div>
             <div class="col-md-3">
                 <img src="../images/taniaProfilePic.JPG" class="profile-pic">
@@ -94,6 +95,7 @@
                 <p class="bio">
                     Tania Mishra is a current Senior in high school and the creator of DTech. Tania has been interested in technology and computer science since her first digital exploration class in 6th grade. She completed two levels of Girls Who Code and participated in multiple workshops focused on empowering and inspiring girls in technology. She has participated and won awards in ProjectCSGirls and Intel ISEF-affiliated science and engineering fairs. She is currently interning at Northwestern Mutual on Jay Walters' team. Tania wants to help lead more girls into the path of computer science. She has received a lot of guidance from teachers mentors at NM, and she wishes to pass it on to younger girls so that they can take advantage of every opportunity and continue to explore technology fields.
                 </p>
+                <a href="https://www.linkedin.com/in/sarah-rubenstein-b042471b1/" target="_blank" class="link">Connect with Sarah on LinkedIn</a>
             </div>
             <div class="col-md-3">
                 <img src="../images/logo.png" class="profile-pic">
@@ -112,6 +114,7 @@
                 <p class="bio">
                     Sanjana Tarigoppula is a junior at the University of Wisconsin-Madison. She started coding her sophomore year of high school, and is now majoring in Computer Sciences and pursuing a certificate in Business. Sanjana is involved in coding organizations such as Coding for Good, where she is working on projects oriented around full stack development, and she will be interning at GE Healthcare this summer. Sanjana is very excited to serve on the board for Divas in Technology and increase awareness on tech careers!
                 </p>
+                <a href="https://www.linkedin.com/in/sanjanatarigoppula/" target="_blank" class="link">Connect with Sanjana on LinkedIn</a>
             </div>
             <div class="col-md-3">
                 <img src="../images/sanjanaProfilePic.jpg" class="profile-pic">
@@ -130,6 +133,7 @@
                 <p class="bio">
                     Tania Mishra is a current Senior in high school and the creator of DTech. Tania has been interested in technology and computer science since her first digital exploration class in 6th grade. She completed two levels of Girls Who Code and participated in multiple workshops focused on empowering and inspiring girls in technology. She has participated and won awards in ProjectCSGirls and Intel ISEF-affiliated science and engineering fairs. She is currently interning at Northwestern Mutual on Jay Walters' team. Tania wants to help lead more girls into the path of computer science. She has received a lot of guidance from teachers mentors at NM, and she wishes to pass it on to younger girls so that they can take advantage of every opportunity and continue to explore technology fields.
                 </p>
+                <a href="#" target="_blank" class="link">Connect with Alyshba on LinkedIn</a>
             </div>
             <div class="col-md-3">
                 <img src="../images/logo.png" class="profile-pic">
