past program ceremony styles updated

--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -73,15 +73,23 @@
                 </p>
             </div>
             <div class="col-md-4 ceremony-bg">
-                <!-- Add group picture here -->
-                <a href="https://youtu.be/yjLoRWqiAEs" target="_blank" class="link ceremony-link">VIEW FINAL CEREMONY</a>
+                <img src="../images/summer2021.png" class="group-pic">
+                <a href="https://youtu.be/yjLoRWqiAEs" target="_blank" class="link">
+                    <button class="ceremony-link">
+                        View Final Ceremony
+                    </button>
+                </a>
             </div>
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-4 ceremony-bg">
-                <!-- Add group picture here -->
-                <a href="https://youtu.be/LjZmXUKcI8c" target="_blank" class="link ceremony-link">VIEW FINAL CEREMONY</a>
+                <img src="../images/summer2021.png" class="group-pic">
+                <a href="https://youtu.be/LjZmXUKcI8c" target="_blank" class="link">
+                    <button class="ceremony-link">
+                        View Final Ceremony
+                    </button>
+                </a>
             </div>
             <div class="col-md-4 program-bg">
                 <p class="program-title">Intro to Web Development</p>
