--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -78,11 +78,15 @@
         <div class="row main-bg" id="program1-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
-                <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Summer 2021 Program</p>
-                <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
+                <p class="program-title">Intro to Coding, Python</p>
+                <p class="program-subheading">Spring 2022</p>
+                <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
                 <p class="program-description">
-                    In this 4-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects were based on their hobbies and interests. We were joined by a guest speaker, Megan Bruzan, the founder and lead developer at Milwaukee Website Designs.
+                    Who: 7th-8th graders, identify as a girl, no programming experience required<br>
+                    When: May 21-22, 9am-4pm<br>
+                    Where: Journey House, Milwaukee<br>
+                    What: In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
+                    Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
                 <a href="#" class="link register">REGISTER NOW</a>
             </div>
@@ -100,11 +104,15 @@
         <div class="row main-bg" id="program2-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
-                <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Summer 2021 Program</p>
-                <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
+                <p class="program-title">Intro to Coding, Python</p>
+                <p class="program-subheading">Spring 2022</p>
+                <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
                 <p class="program-description">
-                    In this 4-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects were based on their hobbies and interests. We were joined by a guest speaker, Megan Bruzan, the founder and lead developer at Milwaukee Website Designs.
+                    Who: 7th-8th graders, identify as a girl, no programming experience required<br>
+                    When: May 21-22, 9am-4pm<br>
+                    Where: Journey House, Milwaukee<br>
+                    What: In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
+                    Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
                 <a href="#" class="link register">REGISTER NOW</a>
             </div>
@@ -122,11 +130,15 @@
         <div class="row main-bg" id="program3-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
-                <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Summer 2021 Program</p>
-                <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
+                <p class="program-title">Intro to Coding, Python</p>
+                <p class="program-subheading">Spring 2022</p>
+                <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
                 <p class="program-description">
-                    In this 4-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects were based on their hobbies and interests. We were joined by a guest speaker, Megan Bruzan, the founder and lead developer at Milwaukee Website Designs.
+                    Who: 7th-8th graders, identify as a girl, no programming experience required<br>
+                    When: May 21-22, 9am-4pm<br>
+                    Where: Journey House, Milwaukee<br>
+                    What: In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
+                    Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
                 <a href="#" class="link register">REGISTER NOW</a>
             </div>
