--- a/pages/mission.html
+++ b/pages/mission.html
@@ -58,7 +58,7 @@
     <div class="container.fluid">
         <div class="row" style="margin-top: 100px;">
             <div class="col-md-2"></div>
-            <div class="col-md-8" id="title">
+            <div class="col-md-8" id="page-title">
                 OUR MISSION AND VISION
             </div>
         </div>
