contact us footer changed to social media

--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -106,19 +106,23 @@
         <div class="row contact-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <p id="contact-title">GET IN TOUCH WITH DTECH</p>
-                <!-- Add line break here -->
+                <p id="contact-title">FOLLOW US ON SOCIAL MEDIA</p>
+                <p id="contact-message">Follow DTech on our social media platforms for updates!</p>
             </div>
         </div>
         <div class="row contact-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-4">
-                <p id="contact-message">Get in touch with us through our social media platforms or contact president Tania Mishra with any questions.</p>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-                <a href="#" class="link" id="contact-tania">CONTACT TANIA MISHRA</a>
-                <!-- Add Instagram and LinkedIn links here -->
+            <div class="col-md-8">
+                <a href="#" target="_blank" class="link">
+                    <button class="social-media">
+                        LinkedIn
+                    </button>
+                </a>
+                <a href="#" target="_blank" class="link">
+                    <button class="social-media">
+                        Instagram
+                    </button>
+                </a>
             </div>
         </div>
     </div>
