--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -43,14 +43,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contactUs.html">Contact</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Donate</a>
-                </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <span class="navbar-text">
+                <a href="#" target="_blank">
+                    <button class="btn my-2 my-sm-0" id="donate-btn">Donate</button>
+                </a>
+            </span>
+            <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn my-2 my-sm-0" id="search-btn" type="submit">Search</button>
-            </form>
+            </form> -->
         </div>
     </nav>
 
