--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row motto1-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <p id="flower-motto">- From This STEM, A Flower Grows -</p>
+                <p id="flower-motto">- From This STEM, A Flower Blooms -</p>
                 <p id="motto-subheading">- DTech Motto</p>
             </div>
         </div>
