insta link added

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -167,7 +167,7 @@
                         LinkedIn
                     </button>
                 </a>
-                <a href="#" target="_blank" class="link">
+                <a href="https://www.instagram.com/tech.divas/" target="_blank" class="link">
                     <button class="social-media">
                         Instagram
                     </button>
