--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -93,7 +93,7 @@
                         LinkedIn
                     </button>
                 </a>
-                <a href="#" target="_blank" class="link">
+                <a href="https://www.instagram.com/tech.divas/" target="_blank" class="link">
                     <button class="social-media">
                         Instagram
                     </button>
