--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -120,7 +120,7 @@
                         LinkedIn
                     </button>
                 </a>
-                <a href="#" target="_blank" class="link">
+                <a href="https://www.instagram.com/tech.divas/" target="_blank" class="link">
                     <button class="social-media">
                         Instagram
                     </button>
