linkedin links updated

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -162,7 +162,7 @@
         <div class="row contact-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <a href="#" target="_blank" class="link">
+                <a href="https://www.linkedin.com/company/divas-in-technology" target="_blank" class="link">
                     <button class="social-media">
                         LinkedIn
                     </button>
